tests/ui/module_usage/wildcard_match_test.stderr
error: Use of module 'std::collections::HashMap' is denied; ["^std::.*"] are not permitted.
  --> tests/ui/module_usage/wildcard_match_test.rs:10:5
   |
LL |     use std::collections::HashMap;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: Remove this import.
   = note: Applied by cargo-pup rule 'wildcard_match_rules'.
   = note: `#[deny(module_usage)]` on by default

error: Use of module 'std::env' is denied; ["^std::.*"] are not permitted.
  --> tests/ui/module_usage/wildcard_match_test.rs:13:5
   |
LL |     use std::env;
   |     ^^^^^^^^^^^^^
   |
   = help: Remove this import.
   = note: Applied by cargo-pup rule 'wildcard_match_rules'.

error: aborting due to 2 previous errors

